Fixed @codeclimate performance isuue