@@ -344,7 +344,7 @@ public class TableCellRenderState extends DisplayRenderState {
 				}
 			}
 		}
-		this.iWhiteSpace = new Integer(wsValue);
+		this.iWhiteSpace = Integer.valueOf(wsValue);
 		return wsValue;
 	}
 
